--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
     <!-- <script src="js/controllers.js"></script> -->
     <!-- <script src="js/services.js"></script> -->
   </head>
-  <body ng-app="unsmonapp">
+  <body ng-app="sensumobileapp">
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
